policies/templates/k8spspautomountserviceaccounttokenpod.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Controls the ability of any Pod to enable automountServiceAccountToken.
    metadata.gatekeeper.sh/title: Automount Service Account Token for Pod
    metadata.gatekeeper.sh/version: 1.0.1
  labels:
  name: k8spspautomountserviceaccounttokenpod
spec:
  crd:
    spec:
      names:
        kind: K8sPSPAutomountServiceAccountTokenPod
      validation:
        legacySchema: false
        openAPIV3Schema:
          description: Controls the ability of any Pod to enable automountServiceAccountToken.
          type: object
  targets:
  - libs:
    - |
      package lib.exclude_update

      is_update(review) {
          review.operation == "UPDATE"
      }
    rego: |
      package k8sautomountserviceaccounttoken

      import data.lib.exclude_update.is_update

      violation[{"msg": msg}] {
          # spec.automountServiceAccountToken and spec.containers.volumeMounts fields are immutable.
          not is_update(input.review)

          obj := input.review.object
          mountServiceAccountToken(obj.spec)
          msg := sprintf("Automounting service account token is disallowed, pod: %v", [obj.metadata.name])
      }

      mountServiceAccountToken(spec) {
          spec.automountServiceAccountToken == true
      }

      # if there is no automountServiceAccountToken spec, check on volumeMount in containers. Service Account token is mounted on /var/run/secrets/kubernetes.io/serviceaccount
      # https://kubernetes.io/docs/reference/access-authn-authz/service-accounts-admin/#serviceaccount-admission-controller
      mountServiceAccountToken(spec) {
          not has_key(spec, "automountServiceAccountToken")
          "/var/run/secrets/kubernetes.io/serviceaccount" == input_containers[_].volumeMounts[_].mountPath
      }

      input_containers[c] {
          c := input.review.object.spec.containers[_]
      }

      input_containers[c] {
          c := input.review.object.spec.initContainers[_]
      }

      # Ephemeral containers not checked as it is not possible to set field.

      has_key(x, k) {
          _ = x[k]
      }
    target: admission.k8s.gatekeeper.sh
